--- a/assets/css/quickinfo.css
+++ b/assets/css/quickinfo.css
@@ -15,13 +15,14 @@
 #quickinfo dl dt {
 	float:left;	
 	width:20px;
-	height:15px;
+	min-height:15px;
 	padding:2px;
 }
 
 #quickinfo dl dd {
 	float:left;	
 	width:120px;
+	min-height:15px;
 	padding:3px 4px;
 	background-color:#EDF1E0;
 	text-align:left;
