--- a/assets/css/week.css
+++ b/assets/css/week.css
@@ -183,7 +183,6 @@
 }
 
 .dayevent {
-	color:#fff;
 	margin-top:1px;
 	padding:1px 2px 2px;
 	white-space:nowrap;
